--- a/src/main/resources/demo-application.properties
+++ b/src/main/resources/demo-application.properties
@@ -3,12 +3,20 @@ spring.application.name=java_ne
 server.port=3500
 
 # MySQL configurations
-spring.datasource.url=jdbc:mysql://localhost:3306/ne_java
+spring.datasource.url=jdbc:mysql://localhost:3306/<data_base>
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=<password>
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA & Hibernate configurations
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# Email Configuration (Gmail)
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
